# portfolio-bot

./: LICENCE  README.md  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
utils/: getChain.py  getDoc.py  getLLM.py  getPrompt.py  tools.py
